# mf-practica

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_config.py
scripts/: generate_charts.py  run_etl.py  test_db.py
src/analysis/: aggregations.py  exploratory.py  metrics.py  reports.py
src/config/: settings.py
src/db/: connection.py
src/db/repositories/: base.py  categoria.py  producto.py
src/etl/: extract.py  load.py  pipeline.py  transform.py
src/visualization/: charts.py  config.py  dashboard.py
